--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
   <ul>
     <p>Email</p>
     <li>2448624053@qq.com | 13318773059@163.com | xinhuang2938@ulinkcollege.com</li>
+    <p>Phone number</p>
+    <li>+86 13318773059 | +61</li>
   </ul>
 </html>
